# SketchVision

./: Dockerfile  README.md  entrypoint.sh  run_sketchvision-env.sh
SketchVision/: CMakeLists.txt  README.md  tasks.py
SketchVision/ML/: GaussianDiffusionClAdvStream.py  UNetClStream.py  clean_dirs.sh  dataset.py  denoise_sketch.py  diffusion_training.py  evaluation.py  forecast_sketch.py  helpers.py  inference_classification.py
SketchVision/configuration/: args99.json
SketchVision/configuration/bot/: telnetpwdla.json  telnetpwdmd.json  thbot.json
SketchVision/configuration/c2/: bitcoinminer.json  mazarbot.json  ransombo.json  wannalocker.json
SketchVision/configuration/ddos/: charrdos.json  cldaprdos.json  riprdos.json  ssdprdos.json
SketchVision/configuration/exfil/: dridex.json  feiwo.json  koler.json  penetho.json  snojan.json
SketchVision/configuration/surveil/: adload.json  mobidash.json  webcompanion.json
SketchVision/eBPF/: Makefile  common.h  dummyNet.sh  loader.c  loader_skel.c  role.sh  xdp_prog.c
SketchVision/include/: basic_dataset.hpp  common.hpp  encoder.hpp  flow_define.hpp  hash.hpp  packet_basic.hpp  packet_info.hpp  sketch.hpp
SketchVision/script/: clean.sh  complie.sh  rebuild.sh  run_slow_bot.sh  run_slow_c2.sh  run_slow_ddos.sh  run_slow_exfil.sh  run_slow_surveil.sh  run_test.sh
SketchVision/src/: basic_dataset.cpp  hash.cpp  main.cpp  sketch.cpp
